--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,4 @@ djangorestframework==3.12.2
 drf-generators==0.5.0
 drf-yasg==1.20.0
 psycopg2-binary==2.8.6
-python-snap7==0.11
-gunicorn
+gunicorn==20.0.4
